Closed Bug 1870821 Opened 6 months ago Closed 3 months ago

Intermittent comm/mail/base/test/browser/browser_editMenu.js | waiting for new repeating timers to be cancelled - timed out after 50 tries.

Categories

(Thunderbird :: Add-Ons: General, defect, P5)

Tracking

(Not tracked)

RESOLVED FIXED
125 Branch

People

(Reporter: intermittent-bug-filer, Assigned: darktrojan)

References

Details

(Keywords: intermittent-failure, intermittent-testcase)

Attachments

(1 file)

See Also: → 1838084, 1848218
Duplicate of this bug: 1870854

We could get stuck with mDiscoveryQ[0] referring to a state object for a folder that no longer
exists. If that happened the auto sync manager would just keep trying to sync it and never succeed.

Assignee: nobody → geoff
Status: NEW → ASSIGNED
Target Milestone: --- → 125 Branch

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/0db523539b3d
Stop trying to auto sync folders that no longer exist. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 3 months ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: