Bug 1870821 - Stop trying to auto sync folders that no longer exist. r=mkmelin We could get stuck with `mDiscoveryQ[0]` referring to a state object for a folder that no longer exists. If that happened the auto sync manager would just keep trying to sync it and never succeed.

Differential Revision: https://phabricator.services.mozilla.com/D203382

--HG--
extra : rebase_source : 664dc89d96face06e628e603fda3a311de0dc596
extra : amend_source : 96226403f89175d2f12ef0cac7ed6c6e9f9c391f